# price_manager

./: .gitignore  Dockerfile  docker-compose.yml  fill_kaspi_goods_script.py  manage.py  pyproject.toml
app/: admin.py  models.py
app/management/commands/: generate_new_excel_doc.py  load_goods_from_excel.py  parse_kaspi_market.py  run_schedule.py
app/management/commands/utils/: generate_xml.py  parse_kaspi_market.py
app/migrations/: 0001_initial.py  0002_competitorgoodsmodel_current_price_and_more.py  0002_kaspigoodsmodel_kaspi_offer_url.py  0003_goodsmodel_price_step.py  0003_kaspigoodsmodel_no_competitors_flag.py  0004_alter_competitorgoodsmodel_table.py  0004_kaspigoodsmodel_prev_price.py  0005_kaspigoodsmodel.py  0006_remove_kaspigoodsmodel_prince.py
app/models/: __init__.py  competitor_goods.py  goods.py  kaspi_goods.py
app/utils/: send_docs_via_tg.py  update_excel_doc.py
price_manager_project/: asgi.py  settings.py  urls.py  wsgi.py
